--- a/style.css
+++ b/style.css
@@ -2,3 +2,28 @@
   stroke: white;
   stroke-width: 2px;
 }
+
+.states {
+  fill: #2c3e50;
+  stroke: white;
+}
+
+svg {
+	border: 1px black solid;
+}
+
+.map-tooltip {
+  position: absolute;
+  text-align: left;
+  padding: 8px;
+  margin-top: -30px;
+  background-color: rgba(255, 255, 255, 0.95);
+  pointer-events: none;
+  border: 1px black solid;
+  border-radius: 1px;
+  font-family: 'Inconsolata', monospace
+}
+
+#map {
+	padding: 5em 0em;
+}
